--- a/index.html
+++ b/index.html
@@ -1,21 +1,157 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="nl">
-	
-<head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2122</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Kevin" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <title>Officiële Nike website</title>
 
-<body>
-	<h1>Howdy FED2122</h1>
-
-	<script src="scripts/script.js"></script>
-</body>
-	
+    <link href="styles/style.css" rel="stylesheet" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="images/logo nike webiste.jpeg"
+    />
+  </head>
+  <body>
+    <header>
+      <a href="index.html">
+      <img src="images/Logo_NIKE.svg.png" alt="Nike logo" />
+    </a>
+      <nav>
+        <img src="/images/winkelmandje.svg" alt="winkelmandje">
+        <img src="/images/zoeken.svg" alt="Zoek button">
+        <img src="/images/nav.svg" alt="Hamburger menu">
+      </nav>
+    </header>
+    <main>
+      <section>
+        <p>
+          COVID-19: hier vind je meer informatie over Nike Stores en bezorging
+          van je bestelling.
+        </p>
+      </section>
+      <section>
+        <figure>
+          <h1>Verander van koers</h1>
+          <img
+            src="/images/Huarache.png"
+            alt="Model met Huarache sneakers aan"
+          />
+          <figcaption>
+            <p>Kies je eigen pad met Huarache</p>
+            <div>
+              <a href="index.html">Shop</a>
+              <a href="index.html">Shop kids</a>
+            </div>
+          </figcaption>
+        </figure>
+      </section>
+      <section>
+        <h2>Gear up</h2>
+        <ul>
+          <li>
+            <img src="/images/huarache1.jpeg" alt="Huarache schoen bruin" />
+            <h4>Nike Air Huarache LE</h4>
+            <p>Herenschoen</p>
+            <p>€ 129,99</p>
+          </li>
+          <li>
+            <img src="/images/huarache2.jpeg" alt="Huarache schoen bruin" />
+            <h4>Nike Air Huarache</h4>
+            <p>Herenschoen</p>
+            <p>€ 129,99</p>
+          </li>
+          <li>
+            <img src="/images/huarache3.jpeg" alt="Huarache schoen bruin" />
+            <h4>Nike Air Huarache LE</h4>
+            <p>Herenschoen</p>
+            <p>€ 129,99</p>
+          </li>
+          <li>
+            <img src="/images/huarache4.jpeg" alt="Huarache schoen bruin" />
+            <h4>Nike Air Huarache</h4>
+            <p>Herenschoen</p>
+            <p>€ 119,99</p>
+          </li>
+          <li>
+            <img src="/images/huarache5.jpeg" alt="Huarache schoen bruin" />
+            <h4>Nike Air Huarache</h4>
+            <p>Herenschoen</p>
+            <p>€ 119,99</p>
+          </li>
+          <li>
+            <img src="/images/huarache6.jpeg" alt="Huarache schoen bruin" />
+            <h4>Nike Air Huarache LE</h4>
+            <p>Herenschoen</p>
+            <p>€ 129,99</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Sport</h2>
+      </section>
+      <section>
+        <h2>Trending</h2>
+        <ul>
+          <li>
+            <img src="/images/Jordan.png" alt="Nike Jordan Sneaker" />
+            <h4>Air Jordan 1 Mid SE</h4>
+            <p>Herenschoen</p>
+            <p>€ 129,99</p>
+          </li>
+          <li>
+            <img src="/images/NikeAirForce.png" alt="Nike Air Force wit met rood" />
+            <h4>Nike Air Force 1</h4>
+            <p>Herenschoen</p>
+            <p>€ 119,99</p>
+          </li>
+          <li>
+            <img src="/images/NikeAirForce1LE.png" alt="Nike Air Force 1 LE wit" />
+            <h4>Nike Air Huarache LE</h4>
+            <p>Herenschoen</p>
+            <p>€ 79,99</p>
+          </li>
+          <li>
+            <img src="/images/NikeSportswear TechFleece.png" alt="Nike Sportswear Tech Fleece Zwart" />
+            <h4>Nike Sportswear Tech Fleese</h4>
+            <p>Hoodie met rits voor heren</p>
+            <p>€ 109,99</p>
+          </li>
+          <li>
+            <img src="/images/NikeAirMaxPlus.png" alt="Nike Air Max Plus Wit" />
+            <h4>Nike Air Max Plus</h4>
+            <p>Herenschoen</p>
+            <p>€ 119,99</p>
+          </li>
+          <li>
+            <img src="/images/NikeSportswear .png" alt="Nike Sportswear" />
+            <h4>Nike sportswear</h4>
+            <p>Sportbroek</p>
+            <p>€ 69,99</p>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <section>
+          <ul>
+            <li>CADEAUBONNEN</li>
+            <li>ZOEK EEN STORE</li>
+            <li>MELD JE AAN VOOR E-MAILS</li>
+            <li>WORD MEMBER</li>
+            <li>STUDENTENKORTING</li>
+            <li>FEEDBACK</li>
+          </ul>
+          <hr></hr>
+        </section>
+      </footer>
+      <script src="scripts/script.js"></script>
+    </main>
+  </body>
 </html>
