--- a/index.html
+++ b/index.html
@@ -57,37 +57,37 @@
         <h2>Gear up</h2>
         <ul>
           <li>
-            <img src="/images/huarache1.jpeg" alt="Huarache schoen bruin" />
+            <img src="../images/huarache1.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="/images/huarache2.jpeg" alt="Huarache schoen bruin" />
+            <img src="../images/huarache2.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="/images/huarache3.jpeg" alt="Huarache schoen bruin" />
+            <img src="../images/huarache3.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="/images/huarache4.jpeg" alt="Huarache schoen bruin" />
+            <img src="../images/huarache4.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
           <li>
-            <img src="/images/huarache5.jpeg" alt="Huarache schoen bruin" />
+            <img src="../images/huarache5.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
           <li>
-            <img src="/images/huarache6.jpeg" alt="Huarache schoen bruin" />
+            <img src="../images/huarache6.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
@@ -101,7 +101,7 @@
         <h2>Trending</h2>
         <ul>
           <li>
-            <img src="/images/Jordan.png" alt="Nike Jordan Sneaker" />
+            <img src="../images/Jordan.png" alt="Nike Jordan Sneaker" />
             <h4>Air Jordan 1 Mid SE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
@@ -149,6 +149,9 @@
             <li>FEEDBACK</li>
           </ul>
           <hr></hr>
+        </section>
+        <section>
+          <button>help</button>
         </section>
       </footer>
       <script src="scripts/script.js"></script>
