--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
         <h2>Gear up</h2>
         <ul>
           <li>
-            <img src="../images/huarache1.jpeg" alt="Huarache schoen bruin" />
+            <img src="/images/huarache1.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="../images/huarache2.jpeg" alt="Huarache schoen bruin" />
+            <img src="/images/huarache2.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="../images/huarache3.jpeg" alt="Huarache schoen bruin" />
+            <img src="/images/huarache3.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="../images/huarache4.jpeg" alt="Huarache schoen bruin" />
+            <img src="/images/huarache4.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
@@ -87,7 +87,7 @@
             <p>€ 119,99</p>
           </li>
           <li>
-            <img src="../images/huarache6.jpeg" alt="Huarache schoen bruin" />
+            <img src="images/huarache6.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
@@ -97,11 +97,13 @@
       <section>
         <h2>Sport</h2>
       </section>
+      <section aria-label="foto2">
+      </section>
       <section>
         <h2>Trending</h2>
         <ul>
           <li>
-            <img src="../images/Jordan.png" alt="Nike Jordan Sneaker" />
+            <img src="/images/Jordan.png" alt="Nike Jordan Sneaker" />
             <h4>Air Jordan 1 Mid SE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
