--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <img src="images/Logo_NIKE.svg.png" alt="Nike logo" />
     </a>
       <nav>
-        <img src="/images/winkelmandje.svg" alt="winkelmandje">
-        <img src="/images/zoeken.svg" alt="Zoek button">
-        <img src="/images/nav.svg" alt="Hamburger menu">
+        <img src="images/winkelmandje.svg" alt="winkelmandje">
+        <img src="images/zoeken.svg" alt="Zoek button">
+        <img src="images/nav.svg" alt="Hamburger menu">
       </nav>
     </header>
     <main>
@@ -41,7 +41,7 @@
         <figure>
           <h1>Verander van koers</h1>
           <img
-            src="/images/Huarache.png"
+            src="images/Huarache.png"
             alt="Model met Huarache sneakers aan"
           />
           <figcaption>
@@ -57,31 +57,31 @@
         <h2>Gear up</h2>
         <ul>
           <li>
-            <img src="/images/huarache1.jpeg" alt="Huarache schoen bruin" />
+            <img src="images/huarache1.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="/images/huarache2.jpeg" alt="Huarache schoen bruin" />
+            <img src="images/huarache2.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="/images/huarache3.jpeg" alt="Huarache schoen bruin" />
+            <img src="images/huarache3.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="/images/huarache4.jpeg" alt="Huarache schoen bruin" />
+            <img src="images/huarache4.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
           <li>
-            <img src="../images/huarache5.jpeg" alt="Huarache schoen bruin" />
+            <img src="images/huarache5.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
@@ -103,37 +103,37 @@
         <h2>Trending</h2>
         <ul>
           <li>
-            <img src="/images/Jordan.png" alt="Nike Jordan Sneaker" />
+            <img src="images/Jordan.png" alt="Nike Jordan Sneaker" />
             <h4>Air Jordan 1 Mid SE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
           <li>
-            <img src="/images/NikeAirForce.png" alt="Nike Air Force wit met rood" />
+            <img src="images/NikeAirForce.png" alt="Nike Air Force wit met rood" />
             <h4>Nike Air Force 1</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
           <li>
-            <img src="/images/NikeAirForce1LE.png" alt="Nike Air Force 1 LE wit" />
+            <img src="images/NikeAirForce1LE.png" alt="Nike Air Force 1 LE wit" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 79,99</p>
           </li>
           <li>
-            <img src="/images/NikeSportswear TechFleece.png" alt="Nike Sportswear Tech Fleece Zwart" />
+            <img src="images/NikeSportswear TechFleece.png" alt="Nike Sportswear Tech Fleece Zwart" />
             <h4>Nike Sportswear Tech Fleese</h4>
             <p>Hoodie met rits voor heren</p>
             <p>€ 109,99</p>
           </li>
           <li>
-            <img src="/images/NikeAirMaxPlus.png" alt="Nike Air Max Plus Wit" />
+            <img src="images/NikeAirMaxPlus.png" alt="Nike Air Max Plus Wit" />
             <h4>Nike Air Max Plus</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
           <li>
-            <img src="/images/NikeSportswear .png" alt="Nike Sportswear" />
+            <img src="images/NikeSportswear.png" alt="Nike Sportswear" />
             <h4>Nike sportswear</h4>
             <p>Sportbroek</p>
             <p>€ 69,99</p>
