--- a/index.html
+++ b/index.html
@@ -27,7 +27,30 @@
       <nav>
         <img src="images/winkelmandje.svg" alt="winkelmandje">
         <img src="images/zoeken.svg" alt="Zoek button">
-        <img src="images/nav.svg" alt="Hamburger menu">
+        <button>
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </nav>
+      <nav>
+        <ul>
+          <li>Cadeaus</li>
+          <li>Nieuwe releases</li>
+          <li>Heren</li>
+          <li>Dames</li>
+          <li>Kids</li>
+          <li>Sale</li>
+          <li>Collecties</li>
+          </ul>
+          <ul>
+          <li>
+            <h4>Jordan</h4>
+          </li>
+          <li>
+            <h4>Converse</h4>
+          </li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -154,7 +177,26 @@
         </section>
         <section>
           <button>help</button>
+          <button>over nike</button>
         </section>
+        <section>
+          <ul>
+            <li><img src="images/twitter.png" alt="twitter logo"></li>
+            <li><img src="images/facebook.png" alt="facebook logo"></li>
+            <li><img src="images/youtube].jpeg" alt="youtube logo"></li>
+            <li><img src="images/instagram.svg" alt="instagram logo"></li>
+          </ul>
+        </section>
+        <!-- <section>
+          <ul>
+          <li>Handleidingen</li>
+          <li>Algemene voorwaarden</li>
+          <li>Verkoopvoorwaarden</li>
+          <li>Bedrijfsgegevens</li>
+          <li>Privacy- en cookiebeleid</li>
+          <li>cookie-instellingen</li>
+        </ul>
+        </section> -->
       </footer>
       <script src="scripts/script.js"></script>
     </main>
