--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       href="images/logo nike webiste.jpeg"
     />
   </head>
-  <body>
+  <body class="home">
     <header>
-      <a href="index.html">
+      <a href="#">
       <img src="images/Logo_NIKE.svg.png" alt="Nike logo" />
     </a>
       <nav>
@@ -35,21 +35,31 @@
       </nav>
       <nav>
         <ul>
-          <li>Cadeaus</li>
-          <li>Nieuwe releases</li>
-          <li>Heren</li>
-          <li>Dames</li>
-          <li>Kids</li>
-          <li>Sale</li>
-          <li>Collecties</li>
+          <a href="#"><li>Cadeaus</li></a>
+          <a href="#"><li>Nieuwe releases</li></a>
+          <a href="#"><li>Heren</li></a>
+          <a href="#"><li>Dames</li></a>
+          <a href="#"><li>Kids</li></a>
+          <a href="#"><li>Sale</li></a>
+          <a href="#"><li>Collecties</li></a>
           </ul>
           <ul>
           <li>
-            <h4>Jordan</h4>
+            <a href="#"><h4>Jordan</h4></a>
           </li>
           <li>
-            <h4>Converse</h4>
+            <a href="#"><h4>Converse</h4></a>
           </li>
+        </ul>
+        <section>
+          <p>Word Nike member en geniet van de beste producten, inspiratie en verhalen op het gebied van sport. Meer info</p>
+          <a href="#">Join us</a>
+          <a href="#">Log in</a>
+        </section>
+        <ul>
+          <li><a href="#">Winkelmandje</li></a>
+          <li><a href="bestellingen.html">Bestellingen</li></a>
+          <li><a href="#">Help</li></a>
         </ul>
       </nav>
     </header>
@@ -79,99 +89,127 @@
       <section>
         <h2>Gear up</h2>
         <ul>
+          <a href="#">
           <li>
             <img src="images/huarache1.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/huarache2.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/huarache3.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/huarache4.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/huarache5.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/huarache6.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
+        </a>
         </ul>
       </section>
       <section>
         <h2>Sport</h2>
+        <h4>Trendy sport items</h4>
+        <a href="#">Shop</a>
       </section>
       <section aria-label="foto2">
+        <h4>Nike Jordan Low Dunk</h4>
+        <a href="#">Shop vrouwen</a>
       </section>
       <section>
         <h2>Trending</h2>
         <ul>
+          <a href="#">
           <li>
             <img src="images/Jordan.png" alt="Nike Jordan Sneaker" />
             <h4>Air Jordan 1 Mid SE</h4>
             <p>Herenschoen</p>
             <p>€ 129,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/NikeAirForce.png" alt="Nike Air Force wit met rood" />
             <h4>Nike Air Force 1</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/NikeAirForce1LE.png" alt="Nike Air Force 1 LE wit" />
             <h4>Nike Air Huarache LE</h4>
             <p>Herenschoen</p>
             <p>€ 79,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/NikeSportswear TechFleece.png" alt="Nike Sportswear Tech Fleece Zwart" />
             <h4>Nike Sportswear Tech Fleese</h4>
             <p>Hoodie met rits voor heren</p>
             <p>€ 109,99</p>
           </li>
+          <a href="#">
           <li>
             <img src="images/NikeAirMaxPlus.png" alt="Nike Air Max Plus Wit" />
             <h4>Nike Air Max Plus</h4>
             <p>Herenschoen</p>
             <p>€ 119,99</p>
           </li>
+        </a>
+        <a href="#">
           <li>
             <img src="images/NikeSportswear.png" alt="Nike Sportswear" />
             <h4>Nike sportswear</h4>
             <p>Sportbroek</p>
             <p>€ 69,99</p>
           </li>
+        </a>
         </ul>
       </section>
+    </main>
       <footer>
         <section>
           <ul>
-            <li>CADEAUBONNEN</li>
-            <li>ZOEK EEN STORE</li>
-            <li>MELD JE AAN VOOR E-MAILS</li>
-            <li>WORD MEMBER</li>
-            <li>STUDENTENKORTING</li>
-            <li>FEEDBACK</li>
+            <li><a href="#">CADEAUBONNEN</li></a>
+            <li><a href="#">ZOEK EEN STORE</li></a>
+            <li><a href="#">MELD JE AAN VOOR E-MAILS</li></a>
+            <li><a href="#">WORD MEMBER</li></a>
+            <li><a href="#">STUDENTENKORTING</li></a>
+            <li><a href="#">FEEDBACK</li></a>
           </ul>
           <hr></hr>
         </section>
@@ -181,24 +219,23 @@
         </section>
         <section>
           <ul>
-            <li><img src="images/twitter.png" alt="twitter logo"></li>
-            <li><img src="images/facebook.png" alt="facebook logo"></li>
-            <li><img src="images/youtube].jpeg" alt="youtube logo"></li>
-            <li><img src="images/instagram.svg" alt="instagram logo"></li>
+            <a href="#"><li><img src="images/twitter.png" alt="twitter logo"></li></a>
+            <a href="#"><li><img src="images/facebook.png" alt="facebook logo"></li></a>
+            <a href="#"><li><img src="images/youtube].jpeg" alt="youtube logo"></li></a>
+            <a href="#"><li><img src="images/instagram.svg" alt="instagram logo"></li></a>
           </ul>
         </section>
-        <!-- <section>
+        <section>
           <ul>
-          <li>Handleidingen</li>
-          <li>Algemene voorwaarden</li>
-          <li>Verkoopvoorwaarden</li>
-          <li>Bedrijfsgegevens</li>
-          <li>Privacy- en cookiebeleid</li>
-          <li>cookie-instellingen</li>
+          <a href="#"><li>Handleidingen</li></a>
+          <a href="#"><li>Algemene voorwaarden</li></a>
+          <a href="#"><li>Verkoopvoorwaarden</li></a>
+          <a href="#"><li>Bedrijfsgegevens</li></a>
+          <a href="#"><li>Privacy- en cookiebeleid</li></a>
+          <a href="#"><li>cookie-instellingen</li></a>
         </ul>
-        </section> -->
+        </section>
       </footer>
       <script src="scripts/script.js"></script>
-    </main>
   </body>
 </html>
