--- a/index.html
+++ b/index.html
@@ -1,95 +1,140 @@
 <!DOCTYPE html>
 <html lang="nl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="Kevin" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-      rel="stylesheet"
-    />
-    <title>Officiële Nike website</title>
 
-    <link href="styles/style.css" rel="stylesheet" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="images/logo nike webiste.jpeg"
-    />
-  </head>
-  <body class="home">
-    <header>
-      <a href="#">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="author" content="Kevin" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet" />
+  <title>Officiële Nike website</title>
+
+  <link href="styles/style.css" rel="stylesheet" />
+  <link rel="icon" type="image/svg+xml" href="images/logo nike webiste.jpeg" />
+</head>
+
+<body class="home">
+  <header>
+    <a class="content" href="#main">Skip naar content</a>
+    <a href="#">
       <img src="images/Logo_NIKE.svg.png" alt="Nike logo" />
     </a>
-      <nav>
-        <img src="images/winkelmandje.svg" alt="winkelmandje">
-        <img src="images/zoeken.svg" alt="Zoek button">
-        <button>
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-      </nav>
-      <nav>
-        <ul>
-          <a href="#"><li>Cadeaus</li></a>
-          <a href="#"><li>Nieuwe releases</li></a>
-          <a href="#"><li>Heren</li></a>
-          <a href="#"><li>Dames</li></a>
-          <a href="#"><li>Kids</li></a>
-          <a href="#"><li>Sale</li></a>
-          <a href="#"><li>Collecties</li></a>
-          </ul>
-          <ul>
-          <li>
-            <a href="#"><h4>Jordan</h4></a>
-          </li>
-          <li>
-            <a href="#"><h4>Converse</h4></a>
-          </li>
-        </ul>
-        <section>
-          <p>Word Nike member en geniet van de beste producten, inspiratie en verhalen op het gebied van sport. Meer info</p>
-          <a href="#">Join us</a>
-          <a href="#">Log in</a>
-        </section>
-        <ul>
-          <li><a href="#">Winkelmandje</li></a>
-          <li><a href="bestellingen.html">Bestellingen</li></a>
-          <li><a href="#">Help</li></a>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <p>
-          COVID-19: hier vind je meer informatie over Nike Stores en bezorging
-          van je bestelling.
-        </p>
-      </section>
-      <section>
-        <figure>
-          <h1>Verander van koers</h1>
-          <img
-            src="images/Huarache.png"
-            alt="Model met Huarache sneakers aan"
-          />
-          <figcaption>
-            <p>Kies je eigen pad met Huarache</p>
-            <div>
-              <a href="index.html">Shop</a>
-              <a href="index.html">Shop kids</a>
-            </div>
-          </figcaption>
-        </figure>
-      </section>
-      <section>
-        <h2>Gear up</h2>
-        <ul>
+    <nav>
+      <img src="images/winkelmandje.svg" alt="winkelmandje">
+      <img src="images/zoeken.svg" alt="Zoek button">
+      <button>
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </nav>
+    <nav>
+      <ul>
+        <a href="#">
+          <li>Cadeaus</li>
+        </a>
+        <a href="#">
+          <li>Nieuwe releases</li>
+        </a>
+        <a href="#">
+          <li>Heren</li>
+        </a>
+        <a href="#">
+          <li>Dames</li>
+        </a>
+        <a href="#">
+          <li>Kids</li>
+        </a>
+        <a href="#">
+          <li>Sale</li>
+        </a>
+        <a href="#">
+          <li>Collecties</li>
+        </a>
+      </ul>
+      <ul>
+        <li>
           <a href="#">
+            <h4>Jordan</h4>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h4>Converse</h4>
+          </a>
+        </li>
+      </ul>
+      <section>
+        <p>Word Nike member en geniet van de beste producten, inspiratie en verhalen op het gebied van sport. Meer info
+        </p>
+        <a href="#">Join us</a>
+        <a href="#">Log in</a>
+      </section>
+      <ul>
+        <li><a href="#">Winkelmandje</li></a>
+        <li><a href="bestellingen.html">Bestellingen</li></a>
+        <li><a href="#">Help</li></a>
+      </ul>
+    </nav>
+    <nav>
+      <ul>
+        <li>Help</li>
+        <li>Join Us</li>
+        <li>Log in</li>
+      </ul>
+    </nav>
+    <nav>
+      <ul>
+        <a href="#">
+          <li>Cadeaus</li>
+        </a>
+        <a href="#">
+          <li>Nieuwe releases</li>
+        </a>
+        <a href="#">
+          <li>Heren</li>
+        </a>
+        <a href="#">
+          <li>Dames</li>
+        </a>
+        <a href="#">
+          <li>Kids</li>
+        </a>
+        <a href="#">
+          <li>Sale</li>
+        </a>
+        <a href="#">
+          <li>Collecties</li>
+        </a>
+      </ul>
+    </nav>
+  </header>
+  <main id="main">
+    <section>
+      <p>
+        COVID-19: hier vind je meer informatie over Nike Stores en bezorging
+        van je bestelling.
+      </p>
+    </section>
+    <section>
+      <figure>
+        <h1>Verander van koers</h1>
+        <figcaption>
+          <p>Kies je eigen pad met Huarache</p>
+          <div>
+            <a href="index.html">Shop</a>
+            <a href="index.html">Shop kids</a>
+          </div>
+        </figcaption>
+      </figure>
+    </section>
+    <section>
+      <h2>Gear up</h2>
+      <ul>
+        <a href="#">
           <li>
             <img src="images/huarache1.jpeg" alt="Huarache schoen bruin" />
             <h4>Nike Air Huarache LE</h4>
@@ -137,21 +182,31 @@
             <p>€ 129,99</p>
           </li>
         </a>
-        </ul>
-      </section>
-      <section>
-        <h2>Sport</h2>
-        <h4>Trendy sport items</h4>
-        <a href="#">Shop</a>
-      </section>
-      <section aria-label="foto2">
-        <h4>Nike Jordan Low Dunk</h4>
-        <a href="#">Shop vrouwen</a>
-      </section>
-      <section>
-        <h2>Trending</h2>
-        <ul>
-          <a href="#">
+      </ul>
+    </section>
+
+
+
+    <article>
+      <h2>Sport</h2>
+      <ul>
+        <li>
+          <h4>Trendy sport items</h4>
+          <a href="#">Shop</a>
+        </li>
+        <li aria-label="foto2">
+          <h4>Nike Jordan Low Dunk</h4>
+          <a href="#">Shop vrouwen</a>
+        </li>
+      </ul>
+    </article>
+
+
+
+    <section>
+      <h2>Trending</h2>
+      <ul>
+        <a href="#">
           <li>
             <img src="images/Jordan.png" alt="Nike Jordan Sneaker" />
             <h4>Air Jordan 1 Mid SE</h4>
@@ -183,59 +238,113 @@
             <p>€ 109,99</p>
           </li>
           <a href="#">
-          <li>
-            <img src="images/NikeAirMaxPlus.png" alt="Nike Air Max Plus Wit" />
-            <h4>Nike Air Max Plus</h4>
-            <p>Herenschoen</p>
-            <p>€ 119,99</p>
-          </li>
+            <li>
+              <img src="images/NikeAirMaxPlus.png" alt="Nike Air Max Plus Wit" />
+              <h4>Nike Air Max Plus</h4>
+              <p>Herenschoen</p>
+              <p>€ 119,99</p>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <img src="images/NikeSportswear.png" alt="Nike Sportswear" />
+              <h4>Nike sportswear</h4>
+              <p>Sportbroek</p>
+              <p>€ 69,99</p>
+            </li>
+          </a>
+      </ul>
+    </section>
+    <section>
+      <h2>Mis het niet</h2>
+      <article>
+      <a href="#">Shop nu</a>
+      <h4>Fortnite x Air Jordan XI</h4>
+    </article>
+    </section>
+    <article>
+      <h2>Meer voor jou</h2>
+      <ul>
+        <li>
+          <h4>Nike Metcon 7</h4>
+          <a href="#">Meer info</a>
+        </li>
+        <li aria-label="foto2">
+          <h4>Hardloopschoenen</h4>
+          <a href="#">Shop nu</a>
+        </li>
+      </ul>
+    </article>
+    <section>
+      <h2>Meer Nike</h2>
+      <ul>
+        <li aria-label="fashion1"><img src="images/nike_fashion1.jpeg" alt="Nike fashion"><a href="#">Shop</a></li>
+        <li aria-label="fashion2"><img src="images/nike_fashion2.jpeg" alt="Nike fashion"><a href="#">Shop</a></li>
+        <li aria-label="fashion3"><img src="images/nike_fashion3.jpeg" alt="Nike fashion"><a href="#">Shop</a></li>
+      </ul>
+    </section>
+  </main>
+
+
+
+
+  <footer>
+    <section>
+      <ul>
+        <li><a href="#">CADEAUBONNEN</li></a>
+        <li><a href="#">ZOEK EEN STORE</li></a>
+        <li><a href="#">MELD JE AAN VOOR E-MAILS</li></a>
+        <li><a href="#">WORD MEMBER</li></a>
+        <li><a href="#">STUDENTENKORTING</li></a>
+        <li><a href="#">FEEDBACK</li></a>
+      </ul>
+      <hr>
+      </hr>
+    </section>
+    <section>
+      <button>help</button>
+      <button>over nike</button>
+    </section>
+    <section>
+      <ul>
+        <a href="#">
+          <li><img src="images/twitter.png" alt="twitter logo"></li>
         </a>
         <a href="#">
-          <li>
-            <img src="images/NikeSportswear.png" alt="Nike Sportswear" />
-            <h4>Nike sportswear</h4>
-            <p>Sportbroek</p>
-            <p>€ 69,99</p>
-          </li>
+          <li><img src="images/facebook.png" alt="facebook logo"></li>
         </a>
-        </ul>
-      </section>
-    </main>
-      <footer>
-        <section>
-          <ul>
-            <li><a href="#">CADEAUBONNEN</li></a>
-            <li><a href="#">ZOEK EEN STORE</li></a>
-            <li><a href="#">MELD JE AAN VOOR E-MAILS</li></a>
-            <li><a href="#">WORD MEMBER</li></a>
-            <li><a href="#">STUDENTENKORTING</li></a>
-            <li><a href="#">FEEDBACK</li></a>
-          </ul>
-          <hr></hr>
-        </section>
-        <section>
-          <button>help</button>
-          <button>over nike</button>
-        </section>
-        <section>
-          <ul>
-            <a href="#"><li><img src="images/twitter.png" alt="twitter logo"></li></a>
-            <a href="#"><li><img src="images/facebook.png" alt="facebook logo"></li></a>
-            <a href="#"><li><img src="images/youtube].jpeg" alt="youtube logo"></li></a>
-            <a href="#"><li><img src="images/instagram.svg" alt="instagram logo"></li></a>
-          </ul>
-        </section>
-        <section>
-          <ul>
-          <a href="#"><li>Handleidingen</li></a>
-          <a href="#"><li>Algemene voorwaarden</li></a>
-          <a href="#"><li>Verkoopvoorwaarden</li></a>
-          <a href="#"><li>Bedrijfsgegevens</li></a>
-          <a href="#"><li>Privacy- en cookiebeleid</li></a>
-          <a href="#"><li>cookie-instellingen</li></a>
-        </ul>
-        </section>
-      </footer>
-      <script src="scripts/script.js"></script>
-  </body>
+        <a href="#">
+          <li><img src="images/youtube].jpeg" alt="youtube logo"></li>
+        </a>
+        <a href="#">
+          <li><img src="images/instagram.svg" alt="instagram logo"></li>
+        </a>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <a href="#">
+          <li>Handleidingen</li>
+        </a>
+        <a href="#">
+          <li>Algemene voorwaarden</li>
+        </a>
+        <a href="#">
+          <li>Verkoopvoorwaarden</li>
+        </a>
+        <a href="#">
+          <li>Bedrijfsgegevens</li>
+        </a>
+        <a href="#">
+          <li>Privacy- en cookiebeleid</li>
+        </a>
+        <a href="#">
+          <li>cookie-instellingen</li>
+        </a>
+      </ul>
+    </section>
+  </footer>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
