--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
           <li><a href="#">Sale</a></li>
           <li><a href="#">Collecties</a></li>
         </ul>
-        <ul>
-          <input
+        <input
             type="search"
             aria-label="zoeken door de website"
             placeholder="Zoeken"
           />
+        <ul>
           <li>
             <a href="bestellingen.html"
               ><img src="images/bestelling_icon.svg" alt=""
@@ -444,7 +444,7 @@
 
           <li>
             <a href="#"
-              ><img src="images/youtube].jpeg" alt="youtube logo"
+              ><img src="images/youtube.jpeg" alt="youtube logo"
             /></a>
           </li>
 
