--- a/index.html
+++ b/index.html
@@ -142,12 +142,20 @@
     </header>
 
     <main id="main">
+
+
+      <!-- GRIJZE SLIDER -->
+
       <section>
         <p>
           COVID-19: hier vind je meer informatie over Nike Stores en bezorging
           van je bestelling.
         </p>
       </section>
+
+
+      <!-- FOTO MET H1 -->
+
       <section>
         <div>
           <h1>Verander van koers</h1>
@@ -159,6 +167,11 @@
           <img src="images/groterefoto.jpeg" alt="Grote foto" />
         </figure>
       </section>
+
+
+      <!-- EERSTE CARROUSEL -->
+
+
       <section>
         <h2>Gear up</h2>
         <ul>
@@ -218,6 +231,9 @@
         </ul>
       </section>
 
+
+      <!-- TWEE ARTIKELEN NAAST ELKAAR -->
+
       <article>
         <h2>Sport</h2>
         <ul>
@@ -225,12 +241,15 @@
             <h4>Trendy sport items</h4>
             <a href="#">Shop</a>
           </li>
-          <li aria-label="foto2">
+          <li>
             <h4>Nike Jordan Low Dunk</h4>
             <a href="#">Shop vrouwen</a>
           </li>
         </ul>
       </article>
+
+
+      <!-- TWEEDE CARROUSEL -->
 
       <section>
         <h2>Trending</h2>
@@ -302,6 +321,11 @@
           </li>
         </ul>
       </section>
+
+
+      <!-- FORTNITE JORDAN -->
+
+
       <section>
         <h2>Mis het niet</h2>
         <article>
@@ -309,11 +333,16 @@
           <h4>Fortnite x Air Jordan XI</h4>
         </article>
       </section>
+
+
+      <!-- TWEEDE ARTIKEL -->
+
+
       <article>
         <h2>Meer voor jou</h2>
         <ul>
           <li>
-            <h4>Nike Metcon 7</h4>
+            <h4>Nike Running</h4>
             <a href="#">Meer info</a>
           </li>
           <li aria-label="foto2">
@@ -325,19 +354,19 @@
       <section>
         <h2>Meer Nike</h2>
         <ul>
-          <li aria-label="fashion1">
+          <li aria-label="Model met Nike kleding aan">
             <img src="images/nike_fashion1.jpeg" alt="Nike fashion" /><a
               href="#"
               >Shop</a
             >
           </li>
-          <li aria-label="fashion2">
+          <li aria-label="Model met Nike kleding aan">
             <img src="images/nike_fashion2.jpeg" alt="Nike fashion" /><a
               href="#"
               >Shop</a
             >
           </li>
-          <li aria-label="fashion3">
+          <li aria-label="Model met Nike kleding aan">
             <img src="images/nike_fashion3.jpeg" alt="Nike fashion" /><a
               href="#"
               >Shop</a
@@ -347,7 +376,12 @@
       </section>
     </main>
 
+
+
+
     <!-- FOOTER MOBIEL-->
+
+
 
     <footer>
       <section>
@@ -404,7 +438,13 @@
         </ul>
       </section>
 
+
+
+
       <!-- FOOTER DESKTOP -->
+
+
+
 
       <section>
         <ul>
