--- a/bestellingen.html
+++ b/bestellingen.html
@@ -47,6 +47,7 @@
       </button>
     </nav>
 
+<!-- NAVIGATIE HUMBURGERMENU -->
 
     <nav>
       <ul>
@@ -83,6 +84,7 @@
       </ul>
     </nav>
 
+<!-- NAVIGATIE DESKTOP -->
 
     <nav>
       <ul>
@@ -137,6 +139,10 @@
       </form>
     </section>
   </main>
+
+
+<!-- FOOTER MOBIEL -->
+
   <footer>
     <section>
       <ul>
