--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       </button>
     </nav>
 
+<!-- NAVIGATIE HAMBURGER MENU -->
+
     <nav>
       <ul>
         <li><a href="#">Cadeaus</a></li>
@@ -79,6 +81,10 @@
         <li><a href="#">Help</a></li>
       </ul>
     </nav>
+
+    
+
+<!-- NAVIGATIE DESKTOP -->
 
     <nav>
       <ul>
@@ -335,14 +341,14 @@
 
   <footer>
     <section>
-        <ul>
-          <li><a href="#">Cadeaubonnen</a></li>
-          <li><a href="#">Zoek een store</a></li>
-          <li><a href="#">Meld je aan voor e-mails</a></li>
-          <li><a href="#">Word Member</a></li>
-          <li><a href="#">Studentenkorting</a></li>
-          <li><a href="#">Feedback</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">Cadeaubonnen</a></li>
+        <li><a href="#">Zoek een store</a></li>
+        <li><a href="#">Meld je aan voor e-mails</a></li>
+        <li><a href="#">Word Member</a></li>
+        <li><a href="#">Studentenkorting</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
       <hr />
     </section>
     <section>
